// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-zomifs-Block {
  min-height: 200px;
}

.cache-zomifs-Block.cache-zomifs-Block {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.cache-kicqmn-Block {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 16px 16px;
  margin-bottom: 16px;
  border-style: solid;
  border-width: 1px;
  border-color: #dce1eb;
  border-radius: 4px;
}

.cache-1fwys9n.cache-1fwys9n {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
}

.cache-32mtjs-Block {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  border-radius: 12px;
  background-color: #dce1eb;
}

.cache-1u4y7cs {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-1flxgld {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.cache-1flxgld.cache-1flxgld {
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="cache-zomifs-Block e7ah3bn0"
    >
      <div
        class="cache-kicqmn-Block"
      >
        <div
          class="cache-1fwys9n e7ah3bn0"
        >
          <div
            class="cache-32mtjs-Block"
          />
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
        <hr
          aria-orientation="horizontal"
          class="eoti1h20 cache-1flxgld e7ah3bn0"
          role="separator"
        />
        <div
          class="cache-1fwys9n e7ah3bn0"
        >
          <div
            class="cache-32mtjs-Block"
          />
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
        <hr
          aria-orientation="horizontal"
          class="eoti1h20 cache-1flxgld e7ah3bn0"
          role="separator"
        />
        <div
          class="cache-1fwys9n e7ah3bn0"
        >
          <div
            class="cache-32mtjs-Block"
          />
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
      </div>
    </div>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-1pu566o-Blocks {
  min-height: 1600 px;
}

.cache-3xl3tq {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0;
  padding-right: 0;
}

@media (min-width: 576px) {
  .cache-3xl3tq {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-3xl3tq {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-3xl3tq {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-3xl3tq {
    max-width: 1140px;
  }
}

.cache-1561i4f {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

.cache-1yolip7 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
  max-width: 25%;
}

.cache-1rjh31y-Blocks {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  margin-bottom: 16px;
  border-style: solid;
  border-width: 1px;
  border-color: #dce1eb;
  border-radius: 4px;
}

.cache-14v2evw-Blocks {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  border-radius: 12px;
  background-color: #dce1eb;
}

.cache-1u4y7cs {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="cache-1pu566o-Blocks e7ah3bn0"
    >
      <div
        class="em1vjd40 cache-3xl3tq e7ah3bn0"
      >
        <div
          class="e1uuye5o0 cache-1561i4f e7ah3bn0"
        >
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
          <div
            class="efyj23m0 cache-1yolip7 e7ah3bn0"
          >
            <div
              class="cache-1rjh31y-Blocks"
            >
              <div
                class="cache-14v2evw-Blocks"
              />
              <div
                class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-35kfaf-BoxWithIcon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #dce1eb;
}

.cache-35kfaf-BoxWithIcon.cache-35kfaf-BoxWithIcon {
  width: 25px;
  height: 25px;
  margin-right: 8px;
  margin-left: 8px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.cache-4honi-BoxWithIcon {
  width: 8.333333333333334px;
  height: 8.333333333333334px;
  border-radius: 8.333333333333334px;
  background-color: #dce1eb;
}

.cache-easwmr {
  height: 12px;
  width: 12.5px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-easwmr.cache-easwmr {
  margin-top: 24px;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="cache-35kfaf-BoxWithIcon e7ah3bn0"
    >
      <div
        class="cache-4honi-BoxWithIcon"
      />
      <div
        class="e15slp7a0 cache-easwmr e7ah3bn0"
      />
    </div>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-1lgohp6-Donut {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1lgohp6-Donut.cache-1lgohp6-Donut {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.cache-ek92dq-Donut {
  position: relative;
  height: 206px;
}

.cache-1dux31o-Donut {
  transform-origin: 50% 50%;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.cache-1uvptj-Donut {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-qiu83h-Donut {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
  margin-left: 16px;
}

.cache-1u4y7cs {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="cache-1lgohp6-Donut e7ah3bn0"
    >
      <div
        class="cache-ek92dq-Donut"
      >
        <svg
          style="height: 206px; min-height: 206px; min-width: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <circle
            class="cache-1dux31o-Donut"
            cx="103"
            cy="103"
            r="90"
          />
        </svg>
      </div>
      <ul
        class="cache-1uvptj-Donut"
      >
        <li
          class="cache-qiu83h-Donut"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </li>
        <li
          class="cache-qiu83h-Donut"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </li>
        <li
          class="cache-qiu83h-Donut"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </li>
        <li
          class="cache-qiu83h-Donut"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </li>
      </ul>
    </div>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-jxkdlb {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-jxkdlb.cache-jxkdlb {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="e15slp7a0 cache-jxkdlb e7ah3bn0"
    />
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-inrgo7 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.cache-inrgo7>.exf86061:nth-of-type(even) {
  background-color: #fafafb;
}

.cache-1t7ed8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.cache-1u4y7cs {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <ul
      class="cache-inrgo7 exf86060"
    >
      <li
        class="cache-1t7ed8m exf86061"
      >
        <div
          style="width: 240px;"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
        <div
          style="width: 360px;"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
      </li>
      <li
        class="cache-1t7ed8m exf86061"
      >
        <div
          style="width: 240px;"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
        <div
          style="width: 360px;"
        >
          <div
            class="e15slp7a0 cache-1u4y7cs e7ah3bn0"
          />
        </div>
      </li>
    </ul>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-qdw476.cache-qdw476 {
  width: 100%;
  position: relative;
  display: block;
  overflow: hidden;
}

.cache-sygccq-Slider {
  height: 277px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: auto;
}

.cache-sygccq-Slider.cache-sygccq-Slider {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.cache-1tpq01d-Slider {
  border: 1px solid #dce1eb;
  border-radius: 4px;
  width: 240px;
  height: 261px;
  margin-right: 16px;
}

.cache-1xq1if8-Slider {
  border: 1px solid #dce1eb;
  background-color: #dce1eb;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  width: 240px;
  height: 77px;
}

.cache-spyscu {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

<div
    class="cache-qdw476 e7ah3bn0"
  >
    <div
      class="cache-sygccq-Slider e7ah3bn0"
    >
      <div
        class="cache-1tpq01d-Slider"
      >
        <div
          class="cache-1xq1if8-Slider"
        />
      </div>
      <div
        class="cache-1tpq01d-Slider"
      >
        <div
          class="cache-1xq1if8-Slider"
        />
      </div>
      <div
        class="cache-1tpq01d-Slider"
      >
        <div
          class="cache-1xq1if8-Slider"
        />
      </div>
      <div
        class="cache-1tpq01d-Slider"
      >
        <div
          class="cache-1xq1if8-Slider"
        />
      </div>
    </div>
    <div
      class="cache-spyscu e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;
